--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,11 @@
 {
     "compilerOptions": {
-        "target": "ES5",
+        "target": "ES6",
         "module": "commonjs",
         "sourceMap": true,
         "watch": true,
         "experimentalDecorators": true,
+        "experimentalAsyncFunctions": true,
         "noLib": true
     },
     "exclude": [ "node_modules"]
