--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "target": "ES6",
+        "module": "commonjs",
         "sourceMap": false,
         "watch": true,
         "experimentalDecorators": true,
