--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
         "watch": true,
         "experimentalDecorators": true,
         "experimentalAsyncFunctions": true,
+        "lib": ["es5", "es6"],
         "noLib": true
     },
     "exclude": [ "node_modules"]
