--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "St Petersburg's future metro",
   "main": "bin/www",
   "dependencies": {
+    "@types/leaflet": "latest",
+    "bim": "latest",
     "alertifyjs": "latest",
     "classlist-polyfill": "latest",
     "es6-promise": "latest",
@@ -15,15 +17,14 @@
     "babel-preset-es2015": "latest",
     "babelify": "latest",
     "browserify": "latest",
-    "browserify-shim": {},
     "gulp": "latest",
     "gulp-notify": "latest",
     "gulp-sourcemaps": "latest",
     "gulp-typescript": "latest",
     "gulp-uglify": "latest",
     "gulp-util": "latest",
-    "literalify": "latest",
     "tsify": "latest",
+    "typescript": "latest",
     "uglify-js": "latest",
     "vinyl-buffer": "latest",
     "vinyl-source-stream": "latest"
