--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "St Petersburg's future metro",
   "main": "bin/www",
   "dependencies": {
+    "@types/express": "latest",
+    "@types/hammerjs": "latest",
     "@types/leaflet": "latest",
-    "bim": "latest",
+    "@types/node": "latest",
+    "@types/whatwg-fetch": "latest",
     "alertifyjs": "latest",
+    "bim": "latest",
     "classlist-polyfill": "latest",
     "es6-promise": "latest",
     "es6-set": "latest",
     "hammerjs": "latest",
-    "leaflet": "latest"
+    "leaflet": "^0"
   },
   "devDependencies": {
     "babel-preset-es2015": "latest",
@@ -30,7 +34,8 @@
     "vinyl-source-stream": "latest"
   },
   "scripts": {
-    "test": "wut"
+    "test": "wut",
+    "start": "gulp; static-server"
   },
   "author": "Anton Veselyev",
   "license": "MIT"
