--- a/package.json
+++ b/package.json
@@ -4,37 +4,35 @@
   "description": "St Petersburg's future metro",
   "main": "bin/www",
   "dependencies": {
-    "@types/express": "latest",
-    "@types/hammerjs": "latest",
-    "@types/leaflet": "latest",
-    "@types/node": "latest",
-    "@types/whatwg-fetch": "latest",
-    "alertifyjs": "latest",
-    "bim": "latest",
-    "classlist-polyfill": "latest",
-    "es6-promise": "latest",
-    "es6-set": "latest",
-    "hammerjs": "latest",
-    "leaflet": "^0"
+    "@types/hammerjs": "^2.0.34",
+    "@types/leaflet": "^0",
+    "@types/lodash": "^4.14.45",
+    "@types/whatwg-fetch": "0.0.33",
+    "alertifyjs": "^1.8.0",
+    "bim": "^0.1.4",
+    "classlist-polyfill": "^1.0.3",
+    "es6-promise": "^4.0.5",
+    "es6-set": "^0.1.4",
+    "hammerjs": "^2.0.8",
+    "leaflet": "^0",
+    "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "babel-preset-es2015": "latest",
-    "babelify": "latest",
-    "browserify": "latest",
-    "gulp": "latest",
-    "gulp-notify": "latest",
-    "gulp-sourcemaps": "latest",
-    "gulp-typescript": "latest",
-    "gulp-uglify": "latest",
-    "gulp-util": "latest",
-    "tsify": "latest",
-    "typescript": "latest",
-    "uglify-js": "latest",
-    "vinyl-buffer": "latest",
-    "vinyl-source-stream": "latest"
+    "babel-preset-es2015": "^6.18.0",
+    "babelify": "^7.3.0",
+    "browserify": "^13.1.1",
+    "gulp": "^3.9.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-sourcemaps": "^1.9.1",
+    "gulp-typescript": "^3.1.3",
+    "gulp-uglify": "^2.0.0",
+    "tsify": "^3.0.0",
+    "typescript": "^2.1.4",
+    "uglify-js": "^2.7.5",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "scripts": {
-    "test": "wut",
     "start": "gulp; static-server"
   },
   "author": "Anton Veselyev",
