--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,16 @@
 {
     "compilerOptions": {
-        "target": "es2015",
+        "target": "es5",
         "module": "commonjs",
         "sourceMap": false,
         "watch": true,
         "experimentalDecorators": true,
-        "experimentalAsyncFunctions": true
+        "experimentalAsyncFunctions": true,
+        // "allowSyntheticDefaultImports": true,
+        "strictNullChecks": true,
+        "lib": [
+            "dom", "es7"
+        ]
     },
     "exclude": [ "node_modules" ]
 }
