--- a/package.json
+++ b/package.json
@@ -18,23 +18,16 @@
     "lodash": "^4.17.4"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.18.0",
-    "babelify": "^7.3.0",
-    "browserify": "^13.1.1",
-    "gulp": "^3.9.1",
-    "gulp-notify": "^2.2.0",
-    "gulp-sourcemaps": "^1.9.1",
-    "gulp-typescript": "^3.1.3",
-    "gulp-uglify": "^2.0.0",
-    "tsify": "^3.0.0",
+    "awesome-typescript-loader": "^3.0.0-beta.17",
+    "css-loader": "^0.26.1",
+    "postcss-loader": "^1.2.1",
+    "source-map-loader": "^0.1.5",
+    "style-loader": "^0.13.1",
     "typescript": "^2.1.4",
-    "uglify-js": "^2.7.5",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0"
+    "webpack": "^2.2.0-rc.3"
   },
   "scripts": {
-    "start": "gulp; static-server",
-    "uglify": "uglifyjs -m -c --screw-ie8 -o js/script.js -- js/script.js"
+    "start": "webpack --progress --colors --watch",
   },
   "author": "Anton Veselyev",
   "license": "MIT"
