--- a/package.json
+++ b/package.json
@@ -7,27 +7,31 @@
     "@types/hammerjs": "^2.0.34",
     "@types/leaflet": "^0",
     "@types/lodash": "^4.14.45",
-    "@types/whatwg-fetch": "0.0.33",
     "alertifyjs": "^1.8.0",
     "bim": "^0.1.4",
-    "classlist-polyfill": "^1.0.3",
-    "es6-promise": "^4.0.5",
-    "es6-set": "^0.1.4",
     "hammerjs": "^2.0.8",
     "leaflet": "^0",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
+    "@types/whatwg-fetch": "0.0.33",
     "awesome-typescript-loader": "^3.0.0-beta.17",
+    "classlist-polyfill": "^1.0.3",
     "css-loader": "^0.26.1",
+    "es6-promise": "^4.0.5",
+    "es6-set": "^0.1.4",
+    "fs-extra": "^1.0.0",
+    "html-webpack-plugin": "^2.25.0",
     "postcss-loader": "^1.2.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
     "typescript": "^2.1.4",
-    "webpack": "^2.2.0-rc.3"
+    "webpack": "^2.2.0-rc.3",
+    "webpack-browser-plugin": "^1.0.20",
+    "whatwg-fetch": "^2.0.1"
   },
   "scripts": {
-    "start": "webpack --progress --colors --watch",
+    "start": "node scripts/build"
   },
   "author": "Anton Veselyev",
   "license": "MIT"
