--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/whatwg-fetch": "0.0.33",
     "awesome-typescript-loader": "^3.0.0-beta.17",
     "classlist-polyfill": "^1.0.3",
+    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "es6-set": "^0.1.4",
