--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "es6-set": "^0.1.4",
+    "exports-loader": "^0.6.3",
     "fs-extra": "^1.0.0",
     "html-webpack-plugin": "^2.25.0",
+    "imports-loader": "^0.7.0",
     "postcss-loader": "^1.2.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.1",
