--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@types/hammerjs": "^2.0.34",
     "@types/leaflet": "^0",
-    "@types/lodash": "^4.14.45",
+    "@types/lodash": "^4.14.48",
     "alertifyjs": "^1.8.0",
     "bim": "^0.1.4",
     "hammerjs": "^2.0.8",
@@ -17,13 +17,14 @@
     "@types/whatwg-fetch": "0.0.33",
     "awesome-typescript-loader": "^3.0.0-beta.17",
     "classlist-polyfill": "^1.0.3",
+    "clean-css": "^3.4.23",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "es6-set": "^0.1.4",
     "exports-loader": "^0.6.3",
     "fs-extra": "^1.0.0",
-    "html-webpack-plugin": "^2.25.0",
+    "html-webpack-plugin": "^2.26.0",
     "imports-loader": "^0.7.0",
     "postcss-loader": "^1.2.1",
     "source-map-loader": "^0.1.5",
