--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "imports-loader": "^0.7.0",
     "postcss-loader": "^1.2.1",
     "source-map-loader": "^0.1.5",
+    "static-server": "^2.0.3",
     "style-loader": "^0.13.1",
     "typescript": "^2.1.4",
     "webpack": "^2.2.0-rc.3",
