--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     "@types/whatwg-fetch": "0.0.33",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "classlist-polyfill": "^1.0.3",
-    "clean-css": "^3.4.23",
-    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "es6-promise": "^4.0.5",
     "es6-set": "^0.1.4",
@@ -30,6 +28,7 @@
     "source-map-loader": "^0.1.6",
     "static-server": "^2.0.3",
     "style-loader": "^0.13.1",
+    "tslint": "^4.3.1",
     "typescript": "^2.1.5",
     "webpack": "^2.2.0-rc.4",
     "webpack-browser-plugin": "^1.0.20",
