--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fs-extra": "^1.0.0",
     "html-webpack-plugin": "^2.26.0",
     "imports-loader": "^0.7.0",
+    "polymorphic-css-loader": "latest",
     "postcss-loader": "^1.2.2",
     "source-map-loader": "^0.1.6",
     "static-server": "^2.0.3",
