--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "bim": "^1.0.14",
     "hammerjs": "^2.0.8",
     "leaflet": "^0.7.7",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "svgio": "^0.3.3"
   },
   "devDependencies": {
     "@types/whatwg-fetch": "0.0.33",
     "autoprefixer": "^6.7.0",
     "awesome-typescript-loader": "^3.0.0-beta.18",
     "classlist-polyfill": "^1.0.3",
-    "clean-css": "^3.4.24",
+    "clean-css": "^4.0.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "cssnano": "^3.10.0",
