--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/lodash": "^4.14.50",
     "alertifyjs": "^1.9.0",
     "bim": "^1.0.14",
+    "download.js": "0.0.3",
     "hammerjs": "^2.0.8",
     "leaflet": "^0.7.7",
     "lodash": "^4.17.4",
