--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@types/whatwg-fetch": "0.0.33",
     "autoprefixer": "^6.7.2",
-    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "awesome-typescript-loader": "^3.0.3",
     "classlist-polyfill": "^1.0.3",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
