--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "devDependencies": {
     "@types/whatwg-fetch": "0.0.33",
     "autoprefixer": "^6.7.2",
-    "awesome-typescript-loader": "^3.0.3",
+    "awesome-typescript-loader": "^3.0.4-rc.2",
     "classlist-polyfill": "^1.0.3",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
@@ -31,7 +31,7 @@
     "fs-extra": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.0",
-    "postcss-loader": "^1.2.2",
+    "postcss-loader": "^1.3.0",
     "source-map-loader": "^0.1.6",
     "static-server": "^2.0.4",
     "style-loader": "^0.13.1",
