--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "download.js": "0.0.3",
     "hammerjs": "^2.0.8",
     "leaflet": "^0.7.7",
-    "localforage": "^1.4.3",
+    "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "svgio": "^0.3.3",
-    "unblur": "0.0.2"
+    "unblur": "^0.3.1"
   },
   "devDependencies": {
     "@types/whatwg-fetch": "0.0.33",
     "autoprefixer": "^6.7.3",
-    "awesome-typescript-loader": "^3.0.4-rc.2",
+    "awesome-typescript-loader": "^3.0.4",
     "classlist-polyfill": "^1.0.3",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
@@ -32,7 +32,7 @@
     "fs-extra": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.0",
-    "postcss-loader": "^1.3.0",
+    "postcss-loader": "^1.3.1",
     "source-map-loader": "^0.1.6",
     "static-server": "^2.0.4",
     "style-loader": "^0.13.1",
