--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@types/hammerjs": "^2.0.34",
     "@types/leaflet": "^0.7.29",
     "@types/localforage": "0.0.33",
-    "@types/lodash": "^4.14.53",
+    "@types/lodash": "^4.14.54",
     "alertifyjs": "^1.9.0",
+    "animate-svg": "0.0.5",
     "bim": "^1.0.15",
     "download.js": "0.0.3",
     "hammerjs": "^2.0.8",
@@ -21,7 +22,7 @@
   },
   "devDependencies": {
     "@types/whatwg-fetch": "0.0.33",
-    "autoprefixer": "^6.7.4",
+    "autoprefixer": "^6.7.6",
     "awesome-typescript-loader": "^3.0.8",
     "classlist-polyfill": "^1.0.3",
     "copy-webpack-plugin": "^4.0.1",
@@ -33,16 +34,16 @@
     "fs-extra": "^2.0.0",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
-    "postcss-loader": "^1.3.2",
+    "postcss-loader": "^1.3.3",
     "source-map-loader": "^0.1.6",
     "static-server": "^2.0.4",
     "style-loader": "^0.13.2",
-    "tslint": "^4.4.2",
+    "tslint": "^4.5.1",
     "typescript": "^2.2.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-browser-plugin": "^1.0.20",
-    "whatwg-fetch": "^2.0.2"
+    "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
     "start": "node scripts/build"
