--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,5 @@ node_js:
 script: chmod a+x deploy.sh && bash ./deploy.sh
 env:
   global:
-  - ENCRYPTION_LABEL: "<.... encryption label from previous step ....>"
+  - ENCRYPTION_LABEL: "someshit"
   - COMMIT_AUTHOR_EMAIL: "anton.veselyev@gmail.com"
