--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "bin/www",
   "dependencies": {
     "@types/hammerjs": "^2.0.34",
-    "@types/leaflet": "^0.7.29",
-    "@types/localforage": "0.0.33",
-    "@types/lodash": "^4.14.55",
+    "@types/leaflet": "^0.7.30",
+    "@types/localforage": "^0.0.34",
+    "@types/lodash": "^4.14.58",
     "alertifyjs": "^1.9.0",
     "animate-svg": "0.0.8",
     "bim": "^1.1.1",
@@ -26,22 +26,22 @@
     "awesome-typescript-loader": "^3.1.2",
     "classlist-polyfill": "^1.0.3",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.27.1",
+    "css-loader": "^0.27.3",
     "cssnano": "^3.10.0",
     "es6-promise": "^4.1.0",
-    "es6-set": "^0.1.4",
+    "es6-set": "^0.1.5",
     "exports-loader": "^0.6.4",
-    "fs-extra": "^2.0.0",
+    "fs-extra": "^2.1.2",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
     "postcss-loader": "^1.3.3",
     "source-map-loader": "^0.2.0",
     "static-server": "^2.0.4",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.16.0",
     "tslint": "^4.5.1",
     "typescript": "^2.2.1",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
+    "webpack": "^2.3.1",
     "webpack-browser-plugin": "^1.0.20",
     "whatwg-fetch": "^2.0.3"
   },
