--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@types/localforage": "^0.0.34",
     "@types/lodash": "^4.14.58",
     "alertifyjs": "^1.9.0",
-    "animate-svg": "0.0.8",
+    "animate-svg": "^1.0.1",
     "bim": "^1.1.1",
     "download.js": "0.0.3",
     "hammerjs": "^2.0.8",
@@ -18,7 +18,7 @@
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "svgio": "^0.3.3",
-    "unblur": "^0.5.2"
+    "unblur": "^0.5.5"
   },
   "devDependencies": {
     "@types/whatwg-fetch": "0.0.33",
