--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "svgio": "^0.3.3",
-    "unblur": "^0.5.5"
+    "unblur": "^0.5.6"
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.34",
@@ -23,7 +23,7 @@
     "@types/localforage": "^0.0.34",
     "@types/lodash": "^4.14.64",
     "@types/whatwg-fetch": "0.0.33",
-    "autoprefixer": "^7.0.0",
+    "autoprefixer": "^7.0.1",
     "awesome-typescript-loader": "^3.1.3",
     "classlist-polyfill": "^1.2.0",
     "copy-webpack-plugin": "^4.0.1",
@@ -35,7 +35,7 @@
     "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^2.0.1",
     "source-map-loader": "^0.2.1",
     "static-server": "^2.0.4",
     "style-loader": "^0.17.0",
@@ -47,7 +47,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "build": "webpack --colors --config webpack.prod.js",
+    "build:prod": "webpack --colors --config webpack.prod.js",
     "start": "node scripts/build"
   },
   "author": "Anton Veselyev",
