--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.5.0",
     "lodash-es": "^4.17.4",
     "svgio": "^0.3.3",
+    "tslib": "^1.7.1",
     "unblur": "^0.5.6"
   },
   "devDependencies": {
