--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "strictNullChecks": true,
     "noImplicitThis": true,
     "downlevelIteration": true,
+    "noEmitHelpers": true,
+    "importHelpers": true,
     "lib": [
       "dom", "es7", "es2017"
     ]
