--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "html-tags": "^1.1.1",
     "leaflet": "^0.7.7",
     "localforage": "^1.5.0",
-    "lodash-es": "^4.17.4",
+    "lodash": "^4.17.4",
     "svgio": "^0.3.3",
     "tslib": "^1.7.1",
     "unblur": "^0.5.6"
@@ -22,13 +22,13 @@
     "@types/hammerjs": "^2.0.34",
     "@types/leaflet": "^0.7.30",
     "@types/localforage": "^0.0.34",
-    "@types/lodash-es": "^4.14.5",
+    "@types/lodash": "^4.14.5",
     "@types/whatwg-fetch": "0.0.33",
     "autoprefixer": "^7.1.1",
     "awesome-typescript-loader": "^3.1.3",
     "classlist-polyfill": "^1.2.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.1",
+    "css-loader": "^0.28.2",
     "cssnano": "^3.10.0",
     "es6-promise": "^4.1.0",
     "es6-set": "^0.1.5",
@@ -39,12 +39,13 @@
     "postcss-loader": "^2.0.5",
     "source-map-loader": "^0.2.1",
     "static-server": "^2.0.4",
-    "style-loader": "^0.17.0",
-    "tslint": "^5.2.0",
-    "typescript": "^2.3.2",
+    "style-loader": "^0.18.1",
+    "tslint": "^5.3.2",
+    "typescript": "^2.3.3",
     "url-loader": "^0.5.8",
-    "webpack": "^2.5.1",
+    "webpack": "^2.6.1",
     "webpack-browser-plugin": "^1.0.20",
+    "webpack-bundle-analyzer": "^2.8.2",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
