--- a/package.json
+++ b/package.json
@@ -28,29 +28,29 @@
     "awesome-typescript-loader": "^3.1.3",
     "classlist-polyfill": "^1.2.0",
     "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.2",
+    "css-loader": "^0.28.3",
     "cssnano": "^3.10.0",
     "es6-promise": "^4.1.0",
     "es6-set": "^0.1.5",
     "exports-loader": "^0.6.4",
-    "fs-extra": "^3.0.1",
     "html-webpack-plugin": "^2.28.0",
     "imports-loader": "^0.7.1",
     "postcss-loader": "^2.0.5",
     "source-map-loader": "^0.2.1",
-    "static-server": "^2.0.4",
     "style-loader": "^0.18.1",
     "tslint": "^5.3.2",
     "typescript": "^2.3.3",
     "url-loader": "^0.5.8",
     "webpack": "^2.6.1",
-    "webpack-browser-plugin": "^1.0.20",
     "webpack-bundle-analyzer": "^2.8.2",
+    "webpack-dev-server": "^2.4.5",
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "build:prod": "webpack --colors --config webpack.prod.js",
-    "start": "node scripts/build"
+    "build:prod": "webpack --colors --config webpack/webpack.config.js --env.ENV=prod",
+    "build:test": "npm run rmdocs && webpack --colors --config webpack/webpack.config.js --env.ENV=test",
+    "rmdocs": "rm -rf docs",
+    "start": "npm run rmdocs && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env.ENV=dev"
   },
   "author": "Anton Veselyev",
   "license": "MIT"
