--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,13 @@ language: node_js
 node_js:
 - stable
 
-script: bash ./deploy.sh
-env:
-  global:
-  - ENCRYPTION_LABEL: 26b4962af0e7
-  - COMMIT_AUTHOR_EMAIL: anton.veselyev@gmail.com
+before_deploy:
+- npm run build:prod
+
+deploy:
+- provider: pages
+  local_dir: docs
+  skip_cleanup: true
+  github_token: $GITHUB_TOKEN
+  on:
+    branch: master
