--- a/package.json
+++ b/package.json
@@ -21,24 +21,25 @@
   "devDependencies": {
     "@types/hammerjs": "^2.0.34",
     "@types/leaflet": "^0.7.30",
-    "@types/lodash": "^4.14.66",
+    "@types/lodash": "^4.14.68",
     "@types/whatwg-fetch": "0.0.33",
-    "autoprefixer": "^7.1.1",
-    "awesome-typescript-loader": "^3.1.3",
+    "autoprefixer": "^7.1.2",
+    "awesome-typescript-loader": "^3.2.1",
     "classlist-polyfill": "^1.2.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
-    "es6-promise": "^4.1.0",
+    "es6-promise": "^4.1.1",
     "es6-set": "^0.1.5",
     "exports-loader": "^0.6.4",
-    "html-webpack-plugin": "^2.28.0",
+    "html-webpack-plugin": "^2.29.0",
     "imports-loader": "^0.7.1",
     "postcss-loader": "^2.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
-    "tslint": "^5.4.3",
-    "typescript": "^2.3.4",
+    "tslint": "^5.5.0",
+    "typescript": "^2.4.1",
+    "uglifyjs-webpack-plugin": "^1.0.0-beta.1",
     "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-bundle-analyzer": "^2.8.2",
