--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "webpack-dev-server": "^2.5.0"
   },
   "scripts": {
-    "build:prod": "webpack --colors --config webpack/webpack.config.js --env.ENV=prod",
-    "build:analyze": "npm run rmdocs && webpack --colors --config webpack/webpack.config.js --env.ENV=analyze",
+    "build:prod": "webpack --colors --config webpack/webpack.config.js --env=prod",
+    "build:analyze": "npm run rmdocs && webpack --colors --config webpack/webpack.config.js --env=analyze",
     "rmdocs": "rm -rf docs",
-    "start": "npm run rmdocs && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env.ENV=dev"
+    "start": "npm run rmdocs && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env=dev"
   },
   "author": "Anton Veselyev",
   "license": "MIT"
