--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "css-loader": "^0.28.4",
     "cssnano": "^3.10.0",
     "html-webpack-plugin": "^2.29.0",
+    "lodash-ts-imports-loader": "^1.1.2",
     "postcss-loader": "^2.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
