--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "core-js": "^2.5.1",
     "delay.js": "^1.0.2",
     "download.js": "0.0.3",
+    "fast-delete": "^1.0.1",
     "hammerjs": "^2.0.8",
     "html-tags": "^2.0.0",
     "leaflet": "^0.7.7",
@@ -37,9 +38,9 @@
     "typescript": "^2.5.2",
     "uglifyjs-webpack-plugin": "^1.0.0-beta.2",
     "url-loader": "^0.5.9",
-    "webpack": "^3.5.6",
+    "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.7.1"
+    "webpack-dev-server": "^2.8.2"
   },
   "scripts": {
     "build:prod": "webpack --colors --config webpack/webpack.config.js --env=prod",
