--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "delay.js": "^1.0.2",
     "download.js": "0.0.3",
     "fast-delete": "^1.0.1",
+    "github-api": "^3.0.0",
     "hammerjs": "^2.0.8",
     "html-tags": "^2.0.0",
     "leaflet": "^0.7.7",
@@ -26,13 +27,13 @@
     "@types/lodash": "^4.14.76",
     "autoprefixer": "^7.1.4",
     "awesome-typescript-loader": "^3.2.3",
-    "copy-webpack-plugin": "^4.0.1",
+    "copy-webpack-plugin": "^4.1.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "html-webpack-plugin": "^2.30.1",
     "lodash-ts-imports-loader": "^1.1.2",
     "postcss-loader": "^2.0.6",
-    "source-map-loader": "^0.2.1",
+    "source-map-loader": "^0.2.2",
     "style-loader": "^0.18.2",
     "tslint": "^5.7.0",
     "typescript": "^2.5.3",
