--- a/package.json
+++ b/package.json
@@ -32,12 +32,12 @@
     "cssnano": "^3.10.0",
     "html-webpack-plugin": "^2.30.1",
     "postcss-loader": "^2.0.8",
-    "source-map-loader": "^0.2.2",
+    "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "tslint": "^5.8.0",
     "typescript": "^2.5.3",
     "typescript-plugin-lodash": "^0.1.0",
-    "uglifyjs-webpack-plugin": "^1.0.0-beta.3",
+    "uglifyjs-webpack-plugin": "^1.0.1",
     "url-loader": "^0.6.2",
     "webpack": "^3.8.1",
     "webpack-bundle-analyzer": "^2.9.0",
