--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "html-webpack-plugin": "^2.30.1",
+    "loader-utils": "^1.1.0",
     "postcss-loader": "^2.0.8",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
