--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@types/hammerjs": "^2.0.35",
     "@types/leaflet": "^1.2.1",
     "@types/lodash": "^4.14.80",
-    "autoprefixer": "^7.1.6",
     "awesome-typescript-loader": "^3.2.3",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "html-webpack-plugin": "^2.30.1",
+    "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
