--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -5,7 +5,7 @@
     "zoom": 11,
     "detailedZoom": 12,
     "url": {
-        "graph": "https://rawgit.com/metrofan/metronetworks/master/{city}/graph.json",
+        "graph": "https://raw.githubusercontent.com/metrofan/metronetworks/master/{city}/graph.json",
         "data": "res/data.json",
         "scheme": "https://rawgit.com/metrofan/metronetworks/master/{city}/scheme.css"
     }
