--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@types/hammerjs": "^2.0.35",
     "@types/leaflet": "^1.2.1",
-    "@types/lodash": "^4.14.80",
+    "@types/lodash": "^4.14.81",
     "awesome-typescript-loader": "^3.3.0",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
@@ -47,7 +47,8 @@
     "build:prod": "webpack --colors --config webpack/webpack.config.js --env=prod",
     "build:analyze": "npm run rmdocs && webpack --colors --config webpack/webpack.config.js --env=analyze",
     "rmdocs": "rm -rf docs",
-    "start": "npm run rmdocs && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env=dev"
+    "start": "npm run rmdocs && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env=dev",
+    "lint": "tslint -p tsconfig.json"
   },
   "author": "Anton Veselyev",
   "license": "MIT"
