--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -5,8 +5,8 @@
     "zoom": 11,
     "detailedZoom": 12,
     "url": {
-        "graph": "https://gitcdn.link/metrofan/metronetworks/master/{city}/graph.json",
+        "graph": "https://raw.githubusercontent.com/metrofan/metronetworks/master/{city}/graph.json",
         "data": "res/data.json",
-        "scheme": "https://gitcdn.link/metrofan/metronetworks/master/{city}/scheme.css"
+        "scheme": "https://rawgit.com/metrofan/metronetworks/master/{city}/scheme.css"
     }
 }
