--- a/src/mapconfig.json
+++ b/src/mapconfig.json
@@ -8,5 +8,14 @@
         "graph": "https://metrofan.github.io/metronetworks/{city}/graph.json",
         "data": "res/faq.json",
         "scheme": "https://metrofan.github.io/metronetworks/{city}/scheme.css"
+    },
+    "favicons": {
+        "spb": "https://upload.wikimedia.org/wikipedia/commons/thumb/0/07/Spb_metro_logo.svg/293px-Spb_metro_logo.svg.png",
+        "moscow": "https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/%D0%9B%D0%BE%D0%B3%D0%BE%D1%82%D0%B8%D0%BF_%D0%BC%D0%B5%D1%82%D1%80%D0%BE_%D0%B2_%D1%81%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B5_%D0%B1%D1%80%D0%B5%D0%BD%D0%B4%D0%B0_%D0%BC%D0%BE%D1%81%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE_%D1%82%D1%80%D0%B0%D0%BD%D1%81%D0%BF%D0%BE%D1%80%D1%82%D0%B0.svg/199px-%D0%9B%D0%BE%D0%B3%D0%BE%D1%82%D0%B8%D0%BF_%D0%BC%D0%B5%D1%82%D1%80%D0%BE_%D0%B2_%D1%81%D0%B8%D1%81%D1%82%D0%B5%D0%BC%D0%B5_%D0%B1%D1%80%D0%B5%D0%BD%D0%B4%D0%B0_%D0%BC%D0%BE%D1%81%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE_%D1%82%D1%80%D0%B0%D0%BD%D1%81%D0%BF%D0%BE%D1%80%D1%82%D0%B0.svg.png",
+        "helsinki": "https://upload.wikimedia.org/wikipedia/commons/thumb/3/30/Helsingin_metro_logo.svg/213px-Helsingin_metro_logo.svg.png",
+        "tallinn": "",
+        "stockholm": "https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Stockholm_metro_symbol.svg/240px-Stockholm_metro_symbol.svg.png",
+        "qazan": "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Kazan-metro-Logo.svg/240px-Kazan-metro-Logo.svg.png",
+        "praha": "https://upload.wikimedia.org/wikipedia/commons/thumb/0/0e/Prag_Metro_Logo.svg/320px-Prag_Metro_Logo.svg.png"
     }
 }
