--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "@types/leaflet": "^1.2.2",
     "@types/lodash": "^4.14.85",
     "awesome-typescript-loader": "^3.3.0",
-    "copy-webpack-plugin": "^4.2.0",
+    "copy-webpack-plugin": "^4.2.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "html-webpack-plugin": "^2.30.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
+    "rimraf": "^2.6.2",
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.0",
     "tslint": "^5.8.0",
@@ -46,7 +47,7 @@
   "scripts": {
     "build:prod": "webpack --colors --config webpack/webpack.config.js --env=prod",
     "build:analyze": "npm run rmdocs && webpack --colors --config webpack/webpack.config.js --env=analyze",
-    "rmdocs": "rm -rf docs",
+    "rmdocs": "rimraf docs",
     "start": "npm run rmdocs && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env=dev",
     "lint": "tslint -p tsconfig.json"
   },
