--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "copy-webpack-plugin": "^4.2.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "html-webpack-plugin": "^2.30.1",
     "postcss-cssnext": "^3.0.2",
     "postcss-loader": "^2.0.8",
