--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
     "target": "es2017",
     "module": "esnext",
     "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
     // "baseUrl": "./src",
     // "sourceMap": true, // not needed when assembled with webpack
     // "watch": true, // not needed when assembled with webpack
     "pretty": true,
     "experimentalDecorators": true,
-    // "allowSyntheticDefaultImports": true,
     "strictNullChecks": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
