--- a/package.json
+++ b/package.json
@@ -23,10 +23,10 @@
   },
   "devDependencies": {
     "@types/hammerjs": "^2.0.35",
-    "@types/leaflet": "^1.2.3",
+    "@types/leaflet": "^1.2.4",
     "@types/lodash": "^4.14.91",
     "awesome-typescript-loader": "^3.4.1",
-    "copy-webpack-plugin": "^4.3.0",
+    "copy-webpack-plugin": "^4.3.1",
     "css-loader": "^0.28.7",
     "cssnano": "^3.10.0",
     "html-webpack-plugin": "^2.30.1",
@@ -38,17 +38,17 @@
     "tslint": "^5.8.0",
     "typescript": "^2.6.2",
     "typescript-plugin-lodash": "^0.1.0",
-    "uglifyjs-webpack-plugin": "^1.1.4",
+    "uglifyjs-webpack-plugin": "^1.1.5",
     "url-loader": "^0.6.2",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.9.1",
     "webpack-dev-server": "^2.9.7"
   },
   "scripts": {
+    "clean": "rimraf docs",
     "build:prod": "webpack --colors --config webpack/webpack.config.js --env=prod",
-    "build:analyze": "npm run rmdocs && webpack --colors --config webpack/webpack.config.js --env=analyze",
-    "rmdocs": "rimraf docs",
-    "start": "npm run rmdocs && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env=dev",
+    "build:analyze": "npm run clean && webpack --colors --config webpack/webpack.config.js --env=analyze",
+    "start": "npm run clean && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env=dev",
     "lint": "tslint -p tsconfig.json"
   },
   "author": "Anton Veselyev",
