--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "html-tags": "^2.0.0",
     "leaflet": "^1.3.1",
     "localforage": "^1.5.6",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.5",
     "svgio": "^0.4.0",
     "tryfunc": "^2.0.1",
     "tslib": "^1.9.0",
@@ -24,16 +24,16 @@
   "devDependencies": {
     "@types/hammerjs": "^2.0.35",
     "@types/leaflet": "^1.2.5",
-    "@types/lodash": "^4.14.100",
+    "@types/lodash": "^4.14.102",
     "awesome-typescript-loader": "^3.4.1",
-    "copy-webpack-plugin": "^4.3.1",
+    "copy-webpack-plugin": "^4.4.1",
     "css-loader": "^0.28.9",
     "cssnano": "^3.10.0",
+    "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.0",
     "rimraf": "^2.6.2",
-    "source-map-loader": "^0.2.3",
     "style-loader": "^0.20.1",
     "tslint": "^5.9.1",
     "typescript": "^2.7.1",
