--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "leaflet": "^1.3.1",
     "localforage": "^1.5.6",
     "lodash": "^4.17.5",
+    "normalize.css": "^8.0.0",
     "svgio": "^0.4.0",
     "tryfunc": "^2.0.1",
     "tslib": "^1.9.0",
@@ -29,6 +30,7 @@
     "copy-webpack-plugin": "^4.4.1",
     "css-loader": "^0.28.9",
     "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.6",
     "html-webpack-plugin": "^2.30.1",
     "postcss-cssnext": "^3.1.0",
