--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "fast-delete": "^1.0.1",
     "github-api": "^3.0.0",
     "hammerjs": "^2.0.8",
+    "history": "^4.7.2",
     "html-tags": "^2.0.0",
     "leaflet": "^1.3.1",
     "localforage": "^1.5.6",
     "lodash": "^4.17.5",
     "normalize.css": "^8.0.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-router-dom": "^4.2.2",
+    "styled-components": "^3.1.6",
     "svgio": "^0.4.0",
     "tryfunc": "^2.0.1",
     "tslib": "^1.9.0",
@@ -26,6 +31,9 @@
     "@types/hammerjs": "^2.0.35",
     "@types/leaflet": "^1.2.5",
     "@types/lodash": "^4.14.102",
+    "@types/react": "^16.0.36",
+    "@types/react-dom": "^16.0.3",
+    "@types/react-router-dom": "^4.2.3",
     "awesome-typescript-loader": "^3.4.1",
     "copy-webpack-plugin": "^4.4.1",
     "css-loader": "^0.28.9",
@@ -38,6 +46,7 @@
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.1",
     "tslint": "^5.9.1",
+    "tslint-react": "^3.4.0",
     "typescript": "^2.7.1",
     "typescript-plugin-lodash": "^0.1.0",
     "uglifyjs-webpack-plugin": "^1.1.8",
