--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,16 @@
     "module": "esnext",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
-    // "baseUrl": "./src",
+    "baseUrl": "./src",
     // "sourceMap": true, // not needed when assembled with webpack
     // "watch": true, // not needed when assembled with webpack
     "pretty": true,
     "experimentalDecorators": true,
+    "jsx": "react",
     "strictNullChecks": true,
     "noImplicitThis": true,
     "noUnusedLocals": true,
-    // "downlevelIteration": true,
+    "downlevelIteration": true,
     "noEmitHelpers": true,
     "importHelpers": true,
     "lib": [
