--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "download.js": "^1.0.0",
     "github-api": "^3.0.0",
     "hammerjs": "^2.0.8",
+    "history": "^4.7.2",
     "html-tags": "^2.0.0",
     "leaflet": "^1.3.4",
     "localforage": "^1.7.2",
     "lodash": "^4.17.11",
     "normalize.css": "^8.0.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^3.4.5",
     "svgio": "^0.4.0",
     "tryfunc": "^2.0.1",
     "tslib": "^1.9.3",
@@ -24,25 +29,29 @@
   "devDependencies": {
     "@types/hammerjs": "^2.0.36",
     "@types/leaflet": "^1.2.11",
-    "@types/lodash": "^4.14.117",
+    "@types/lodash": "^4.14.116",
+    "@types/react": "^16.4.13",
+    "@types/react-dom": "^16.0.7",
+    "@types/react-router-dom": "^4.3.0",
     "awesome-typescript-loader": "^5.2.1",
-    "copy-webpack-plugin": "^4.5.4",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
-    "cssnano": "^4.1.5",
+    "cssnano": "^4.1.4",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.4.3",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
-    "style-loader": "^0.23.1",
+    "style-loader": "^0.23.0",
     "tslint": "^5.11.0",
-    "typescript": "^3.1.3",
+    "tslint-react": "^3.6.0",
+    "typescript": "^3.1.1",
     "typescript-plugin-lodash": "^0.1.0",
     "uglifyjs-webpack-plugin": "^2.0.1",
-    "webpack": "^4.21.0",
-    "webpack-bundle-analyzer": "^3.0.3",
+    "webpack": "^4.20.2",
+    "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9"
   },
