--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "build:prod": "webpack --colors --config webpack/webpack.config.js --env=prod",
     "build:analyze": "npm run clean && webpack --colors --config webpack/webpack.config.js --env=analyze",
     "start": "npm run clean && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env=dev",
+    "test": "echo \"lol no test\"",
     "lint": "tslint -p tsconfig.json"
   },
   "author": "Anton Veselyev",
