--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "hammerjs": "^2.0.8",
     "html-tags": "^2.0.0",
     "leaflet": "^1.3.1",
-    "localforage": "^1.5.6",
+    "localforage": "^1.6.0",
     "lodash": "^4.17.5",
     "normalize.css": "^8.0.0",
     "svgio": "^0.4.0",
@@ -27,7 +27,7 @@
     "@types/leaflet": "^1.2.5",
     "@types/lodash": "^4.14.102",
     "awesome-typescript-loader": "^3.4.1",
-    "copy-webpack-plugin": "^4.4.3",
+    "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.9",
     "cssnano": "^3.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
@@ -41,10 +41,10 @@
     "typescript": "^2.7.1",
     "typescript-plugin-lodash": "^0.1.0",
     "uglifyjs-webpack-plugin": "^1.1.8",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.11.0",
+    "webpack": "^4.1.0",
     "webpack-bundle-analyzer": "^2.11.1",
-    "webpack-dev-server": "^2.11.2"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.0"
   },
   "scripts": {
     "clean": "rimraf docs",
