--- a/package.json
+++ b/package.json
@@ -30,9 +30,10 @@
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "cssnano": "^4.0.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.1",
+    "optimize-css-assets-webpack-plugin": "^4.0.3",
     "postcss-cssnext": "^3.1.0",
     "postcss-loader": "^2.1.6",
     "rimraf": "^2.6.2",
