--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,10 +11,12 @@
     "alwaysStrict": true,
     "strictBindCallApply": true,
     "experimentalDecorators": true,
+    "jsx": "react",
     "strictNullChecks": true,
+    "esModuleInterop": true,
     "noImplicitThis": true,
-    "noUnusedLocals": true,
-    // "downlevelIteration": true,
+    "noImplicitAny": true,
+    "downlevelIteration": true,
     "resolveJsonModule": true,
     "noEmitHelpers": true,
     "importHelpers": true,
