--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "download.js": "^1.0.0",
     "github-api": "^3.4.0",
     "hammerjs": "^2.0.8",
+    "history": "^5.0.0",
     "html-tags": "^3.1.0",
     "leaflet": "^1.7.1",
     "localforage": "^1.9.0",
     "lodash": "^4.17.21",
+    "memoize-one": "^5.1.1",
     "normalize.css": "^8.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^5.0.1",
     "svgio": "^0.4.0",
     "tryfunc": "^3.1.0",
     "tslib": "^2.4.0",
@@ -25,9 +31,17 @@
     "@types/hammerjs": "^2.0.40",
     "@types/leaflet": "^1.7.4",
     "@types/lodash": "^4.14.171",
+    "@types/memoize-one": "^5.1.2",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.3",
+    "@types/styled-components": "^5.1.25",
     "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
+    "css-loader": "^6.7.1",
     "eslint": "^8.21.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.30.1",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^2.1.0",
     "npm-run-all": "^4.1.5",
