--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "metro-map",
   "version": "0.6.5",
   "description": "St Petersburg's future metro",
-  "main": "bin/www",
   "dependencies": {
     "alertifyjs": "^1.13.1",
     "animate-svg": "^1.1.0",
@@ -26,35 +25,36 @@
     "@types/hammerjs": "^2.0.40",
     "@types/leaflet": "^1.7.4",
     "@types/lodash": "^4.14.171",
-    "awesome-typescript-loader": "^5.2.1",
-    "copy-webpack-plugin": "^6.4.1",
-    "css-loader": "^3.6.0",
-    "cssnano": "^4.1.11",
+    "copy-webpack-plugin": "^9.0.1",
+    "css-loader": "^6.2.0",
     "eslint": "^7.31.0",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^4.5.2",
-    "mini-css-extract-plugin": "^0.9.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.8",
-    "postcss-cssnext": "^3.1.0",
-    "postcss-loader": "^3.0.0",
-    "rimraf": "^3.0.2",
-    "style-loader": "^1.3.0",
-    "typescript": "^3.9.10",
+    "html-webpack-plugin": "^5.3.1",
+    "mini-css-extract-plugin": "^2.1.0",
+    "npm-run-all": "^4.1.5",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
+    "postcss": "^8.3.6",
+    "postcss-loader": "^6.1.1",
+    "postcss-nested": "^5.0.5",
+    "postcss-preset-env": "^6.7.0",
+    "style-loader": "^3.2.1",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^22.0.0",
+    "terser-webpack-plugin": "^5.1.3",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4",
     "typescript-plugin-lodash": "^0.1.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^3.9.0",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.39.1",
+    "webpack-bundle-analyzer": "^4.4.2",
+    "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "clean": "rimraf docs",
-    "build:prod": "webpack --colors --config webpack/webpack.config.js --env=prod",
-    "build:analyze": "npm run clean && webpack --colors --config webpack/webpack.config.js --env=analyze",
-    "start": "npm run clean && webpack-dev-server --colors --watch --config webpack/webpack.config.js --env=dev",
-    "test": "echo \"lol no test\"",
     "lint:js": "eslint --ext .ts,.tsx --max-warnings=0 src",
-    "lint:css": "stylelint './src/**/*.ts'"
+    "lint:css": "stylelint './src/**/*.ts'",
+    "lint": "run-p -c \"lint:css -- {1}\" \"lint:js -- {1}\" --",
+    "build": "webpack --color --config webpack/webpack.config.js",
+    "start": "webpack serve --color --env dev --config webpack/webpack.config.js",
+    "test": "echo \"No test\""
   },
   "author": "Anton Veselyev",
   "license": "MIT"
